--- a/src/main/resources/com/tiromosca/network/view/ActualMatch.fxml
+++ b/src/main/resources/com/tiromosca/network/view/ActualMatch.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane fx:id="dashboard" prefHeight="548.0" prefWidth="385.0" styleClass="actual_match_container" stylesheets="@../style/ActualMatch.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tiromosca.network.controller.ActualMatchController">
    <children>
       <VBox layoutX="38.0" layoutY="63.0" prefHeight="463.0" prefWidth="349.0" styleClass="actual_match_content_container" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="53.0">
@@ -50,7 +49,12 @@
                   <TextField fx:id="value_input" prefHeight="58.0" prefWidth="192.0" styleClass="input_field" />
                </children>
             </VBox>
-            <VBox prefHeight="106.0" prefWidth="350.0" styleClass="actual_match_content_button_container">
+            <VBox prefHeight="46.0" prefWidth="350.0" styleClass="actual_match_warning_container">
+               <children>
+                  <Text fx:id="warning_message" strokeType="OUTSIDE" strokeWidth="0.0" text="Digite um valor com 3 dígitos diferentes" />
+               </children>
+            </VBox>
+            <VBox prefHeight="87.0" prefWidth="350.0" styleClass="actual_match_content_button_container">
                <children>
                   <Button fx:id="go_button" mnemonicParsing="false" text="Pronto!" />
                </children>
