--- a/src/main/resources/com/tiromosca/network/view/ChooseValue.fxml
+++ b/src/main/resources/com/tiromosca/network/view/ChooseValue.fxml
@@ -11,8 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="548.0" prefWidth="385.0" styleClass="choose_value_container" stylesheets="@../style/ChooseValue.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tiromosca.network.controller.ChooseValueController">
+<AnchorPane fx:id="dashboard" prefHeight="548.0" prefWidth="385.0" styleClass="choose_value_container" stylesheets="@../style/ChooseValue.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tiromosca.network.controller.ChooseValueController">
    <children>
       <VBox layoutX="28.0" layoutY="53.0" prefHeight="463.0" prefWidth="349.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="53.0">
          <children>
