--- a/src/main/resources/com/tiromosca/network/view/Result.fxml
+++ b/src/main/resources/com/tiromosca/network/view/Result.fxml
@@ -1,10 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.tiromosca.network.controller.ResultController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane fx:id="dashboard" prefHeight="548.0" prefWidth="385.0" styleClass="result_container" stylesheets="@../style/Result.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tiromosca.network.controller.ResultController">
+   <children>
+      <VBox layoutX="24.0" layoutY="24.0" prefHeight="463.0" prefWidth="349.0" styleClass="result_content_container" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="53.0">
+         <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="result_content_container" text="Tiro e mosca" textAlignment="CENTER" wrappingWidth="276.5117645263672">
+               <VBox.margin>
+                  <Insets top="23.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="Ebrima" size="43.0" />
+               </font>
+            </Text>
+            <ImageView fitHeight="60.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
+               <VBox.margin>
+                  <Insets left="270.0" top="-53.0" />
+               </VBox.margin>
+               <image>
+                  <Image url="@../image/mosca-icone.png" />
+               </image>
+            </ImageView>
+            <VBox fillWidth="false" prefHeight="74.0" prefWidth="350.0" styleClass="result_content_title_container">
+               <children>
+                  <Text fx:id="result_label" strokeType="OUTSIDE" strokeWidth="0.0" text="Você ganhou | perdeu!" wrappingWidth="335.2740135192871">
+                     <VBox.margin>
+                        <Insets left="10.0" />
+                     </VBox.margin>
+                  </Text>
+               </children>
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
+            </VBox>
+            <VBox fillWidth="false" prefHeight="42.0" prefWidth="350.0" styleClass="result_content_title_textfield_container">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="O número era:" />
+               </children>
+            </VBox>
+            <VBox fillWidth="false" prefHeight="78.0" prefWidth="350.0" styleClass="result_content_result_container">
+               <children>
+                  <VBox prefHeight="98.0" prefWidth="150.0" styleClass="result_content_result_background_container">
+                     <children>
+                        <Text fx:id="value_label" strokeType="OUTSIDE" strokeWidth="0.0" text="123">
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </Text>
+                     </children>
+                  </VBox>
+               </children>
+            </VBox>
+            <VBox fillWidth="false" prefHeight="102.0" prefWidth="350.0" styleClass="result_content_title_textfield_container">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Placar:" />
+                  <Text fx:id="your_victories_label" layoutX="121.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Você: x vitórias" />
+                  <Text fx:id="opponent_victories_label" layoutX="96.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Oponente: x vitórias" />
+               </children>
+            </VBox>
+            <VBox prefHeight="71.0" prefWidth="350.0" styleClass="result_content_button_container">
+               <children>
+                  <Button fx:id="play_again_button" mnemonicParsing="false" text="Jogar novamente" />
+               </children>
+            </VBox>
+         </children>
+      </VBox>
+   </children>
 </AnchorPane>
