--- a/src/main/resources/com/tiromosca/network/view/LoadingBetweenRounds.fxml
+++ b/src/main/resources/com/tiromosca/network/view/LoadingBetweenRounds.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="dashboard" prefHeight="548.0" prefWidth="385.0" styleClass="loading_container" stylesheets="@../style/Loading.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tiromosca.network.controller.LoadingBetweenRounds">
+<AnchorPane fx:id="dashboard" prefHeight="548.0" prefWidth="385.0" styleClass="loading_container" stylesheets="@../style/Loading.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tiromosca.network.controller.LoadingBetweenRoundsController">
     <children>
         <VBox layoutX="18.0" layoutY="50.0" prefHeight="463.0" prefWidth="349.0" styleClass="loading_content_container" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="53.0">
             <children>
