--- a/src/main/resources/com/tiromosca/network/view/ActualMatch.fxml
+++ b/src/main/resources/com/tiromosca/network/view/ActualMatch.fxml
@@ -10,11 +10,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="dashboard" prefHeight="548.0" prefWidth="385.0" styleClass="actual_match_container" stylesheets="@../style/ActualMatch.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tiromosca.network.controller.ActualMatchController">
+<AnchorPane fx:id="dashboard" prefHeight="548.0" prefWidth="385.0" styleClass="actual_match_container"
+            stylesheets="@../style/ActualMatch.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.tiromosca.network.controller.ActualMatchController">
    <children>
-      <VBox layoutX="38.0" layoutY="63.0" prefHeight="463.0" prefWidth="349.0" styleClass="actual_match_content_container" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="53.0">
+      <VBox layoutX="38.0" layoutY="63.0" prefHeight="463.0" prefWidth="349.0" styleClass="actual_match_content_container"
+            AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="53.0">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="gameType_content_container" text="Tiro e mosca" textAlignment="CENTER" wrappingWidth="276.5117645263672">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="gameType_content_container"
+                  text="Tiro e mosca" textAlignment="CENTER" wrappingWidth="276.5117645263672">
                <VBox.margin>
                   <Insets top="23.0" />
                </VBox.margin>
