--- a/src/main/resources/com/tiromosca/network/view/ActualMatch.fxml
+++ b/src/main/resources/com/tiromosca/network/view/ActualMatch.fxml
@@ -1,24 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="dashboard" prefHeight="548.0" prefWidth="385.0" styleClass="actual_match_container"
-            stylesheets="@../style/ActualMatch.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.tiromosca.network.controller.ActualMatchController">
+<AnchorPane fx:id="dashboard" prefHeight="548.0" prefWidth="385.0" styleClass="actual_match_container" stylesheets="@../style/ActualMatch.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tiromosca.network.controller.ActualMatchController">
    <children>
-      <VBox layoutX="38.0" layoutY="63.0" prefHeight="463.0" prefWidth="349.0" styleClass="actual_match_content_container"
-            AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="53.0">
+      <VBox layoutX="38.0" layoutY="63.0" prefHeight="463.0" prefWidth="349.0" styleClass="actual_match_content_container" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="53.0">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="gameType_content_container"
-                  text="Tiro e mosca" textAlignment="CENTER" wrappingWidth="276.5117645263672">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="gameType_content_container" text="Tiro e mosca" textAlignment="CENTER" wrappingWidth="276.5117645263672">
                <VBox.margin>
                   <Insets top="23.0" />
                </VBox.margin>
@@ -34,7 +26,7 @@
                   <Image url="@../image/mosca-icone.png" />
                </image>
             </ImageView>
-            <VBox fillWidth="false" prefHeight="90.0" prefWidth="350.0" styleClass="actual_match_content_title_container">
+            <VBox fillWidth="false" prefHeight="68.0" prefWidth="350.0" styleClass="actual_match_content_title_container">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Tente adivinhar o número que seu oponente escolheu..." wrappingWidth="333.6742248535156">
                      <VBox.margin>
@@ -43,14 +35,17 @@
                   </Text>
                </children>
             </VBox>
-            <VBox fillWidth="false" prefHeight="53.0" prefWidth="350.0" styleClass="actual_match_content_title_textfield_container">
+            <VBox fillWidth="false" prefHeight="43.0" prefWidth="350.0" styleClass="actual_match_content_title_textfield_container">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Digite seu palpite" />
                </children>
+               <VBox.margin>
+                  <Insets top="-5.0" />
+               </VBox.margin>
             </VBox>
-            <VBox fillWidth="false" prefHeight="58.0" prefWidth="350.0" styleClass="actual_match_content_textfield_container">
+            <VBox fillWidth="false" prefHeight="43.0" prefWidth="350.0" styleClass="actual_match_content_textfield_container">
                <children>
-                  <TextField fx:id="value_input" prefHeight="58.0" prefWidth="192.0" styleClass="input_field" />
+                  <TextField fx:id="value_input" prefHeight="67.0" prefWidth="192.0" styleClass="input_field" />
                </children>
             </VBox>
             <VBox prefHeight="46.0" prefWidth="350.0" styleClass="actual_match_warning_container">
@@ -60,12 +55,22 @@
             </VBox>
             <VBox prefHeight="87.0" prefWidth="350.0" styleClass="actual_match_content_button_container">
                <children>
-                  <Button fx:id="go_button" mnemonicParsing="false" text="Pronto!" />
+                  <Button fx:id="play_history_button" mnemonicParsing="false" text="Ver jogadas">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin></Button>
+                  <Button fx:id="go_button" mnemonicParsing="false" prefHeight="33.0" text="Pronto!">
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin></Button>
                </children>
             </VBox>
-            <VBox fillWidth="false" prefHeight="53.0" prefWidth="350.0" styleClass="actual_match_content_title_textfield_container">
+            <VBox fillWidth="false" prefHeight="51.0" prefWidth="350.0" styleClass="actual_match_content_title_textfield_container">
                <children>
-                  <Text fx:id="player_aim" strokeType="OUTSIDE" strokeWidth="0.0" text="Exibir número escolhido " />
+                  <Text fx:id="player_aim" strokeType="OUTSIDE" strokeWidth="0.0" text="Exibir número escolhido ">
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin></Text>
                </children>
             </VBox>
          </children>
