--- a/src/main/resources/com/tiromosca/network/view/ActualMatchSingleplayer.fxml
+++ b/src/main/resources/com/tiromosca/network/view/ActualMatchSingleplayer.fxml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="dashboard" prefHeight="548.0" prefWidth="385.0" styleClass="actual_match_container" stylesheets="@../style/ActualMatch.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tiromosca.network.singleplayer.controller.ActualMatchController">
+<AnchorPane fx:id="dashboard" prefHeight="548.0" prefWidth="385.0" styleClass="actual_match_container" stylesheets="@../style/ActualMatch.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tiromosca.network.singleplayer.controller.ActualMatchController">
    <children>
       <VBox layoutX="38.0" layoutY="63.0" prefHeight="463.0" prefWidth="349.0" styleClass="actual_match_content_container" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="53.0">
          <children>
@@ -30,7 +26,7 @@
                   <Image url="@../image/mosca-icone.png" />
                </image>
             </ImageView>
-            <VBox fillWidth="false" prefHeight="90.0" prefWidth="350.0" styleClass="actual_match_content_title_container">
+            <VBox fillWidth="false" prefHeight="59.0" prefWidth="350.0" styleClass="actual_match_content_title_container">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Tente adivinhar o número que seu oponente escolheu..." wrappingWidth="333.6742248535156">
                      <VBox.margin>
@@ -39,7 +35,7 @@
                   </Text>
                </children>
             </VBox>
-            <VBox fillWidth="false" prefHeight="53.0" prefWidth="350.0" styleClass="actual_match_content_title_textfield_container">
+            <VBox fillWidth="false" prefHeight="42.0" prefWidth="350.0" styleClass="actual_match_content_title_textfield_container">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Digite seu palpite" />
                </children>
@@ -56,10 +52,17 @@
             </VBox>
             <VBox prefHeight="87.0" prefWidth="350.0" styleClass="actual_match_content_button_container">
                <children>
-                  <Button fx:id="go_button" mnemonicParsing="false" text="Pronto!" />
+                  <Button fx:id="play_history_button" mnemonicParsing="false" text="Ver jogadas">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin></Button>
+                  <Button fx:id="go_button" mnemonicParsing="false" prefHeight="33.0" text="Pronto!">
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin></Button>
                </children>
             </VBox>
-            <VBox fillWidth="false" prefHeight="53.0" prefWidth="350.0" styleClass="actual_match_content_title_textfield_container">
+            <VBox fillWidth="false" prefHeight="58.0" prefWidth="350.0" styleClass="actual_match_content_title_textfield_container">
                <children>
                   <Text fx:id="player_aim" strokeType="OUTSIDE" strokeWidth="0.0" text="Exibir número escolhido " />
                </children>
