--- a/src/main/resources/com/tiromosca/network/view/PlayHistorySinglePlayer.fxml
+++ b/src/main/resources/com/tiromosca/network/view/PlayHistorySinglePlayer.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="dashboard" prefHeight="548.0" prefWidth="385.0" styleClass="choose_value_container" stylesheets="@../style/ChooseValue.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tiromosca.network.controller.ChooseValueController">
+<AnchorPane fx:id="dashboard" prefHeight="548.0" prefWidth="385.0" styleClass="play_history_container" stylesheets="@../style/PlayHistory.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tiromosca.network.singleplayer.controller.PlayHistoryController">
    <children>
       <VBox layoutX="28.0" layoutY="53.0" prefHeight="463.0" prefWidth="349.0" AnchorPane.rightAnchor="18.0" AnchorPane.topAnchor="53.0">
          <children>
@@ -27,36 +27,41 @@
                   <Image url="@../image/mosca-icone.png" />
                </image>
             </ImageView>
-            <VBox fillWidth="false" prefHeight="53.0" prefWidth="350.0" styleClass="choose_value_content_title_container">
+            <VBox fillWidth="false" prefHeight="53.0" prefWidth="350.0" styleClass="play_history_content_title_container">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Digite um número" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Histórico de jogadas" />
                </children>
             </VBox>
-            <VBox fillWidth="false" prefHeight="58.0" prefWidth="350.0" styleClass="choose_value_content_textfield_container">
+            <VBox prefHeight="268.0" prefWidth="350.0" styleClass="play_history_list_view_container">
                <children>
-                  <TextField fx:id="value_input" prefHeight="58.0" prefWidth="192.0" styleClass="input_field" />
+                  <ListView fx:id="listView" prefHeight="177.0" prefWidth="330.0" styleClass="play_history_list_view_container">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </ListView>
                </children>
+               <VBox.margin>
+                  <Insets left="20.0" right="20.0" top="20.0" />
+               </VBox.margin>
             </VBox>
-            <VBox prefHeight="26.0" prefWidth="350.0" styleClass="choose_value_warning_container">
-               <children>
-                  <Text fx:id="warning_message" strokeType="OUTSIDE" strokeWidth="0.0" text="Digite um valor com 3 dígitos diferentes" />
-               </children>
-            </VBox>
-            <VBox prefHeight="157.0" prefWidth="350.0" styleClass="choose_value_content_button_container">
+            <VBox prefHeight="157.0" prefWidth="350.0" styleClass="play_history_content_button_container">
                <VBox.margin>
                   <Insets top="40.0" />
                </VBox.margin>
                <children>
-                  <Button fx:id="start_button" mnemonicParsing="false" text="Pronto!" />
+                  <Button fx:id="close_button" mnemonicParsing="false" text="Fechar" />
                </children>
             </VBox>
          </children>
          <styleClass>
-            <String fx:value="gameType_content_container" />
-            <String fx:value="choose_value_content_container" />
+            <String fx:value="play_history_content_container" />
+            <String fx:value="play_history_content_container" />
          </styleClass>
       </VBox>
    </children>
